--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Experience from '../components/Experience.astro';
 import Skills from '../components/Skills.astro';
 import Education from '../components/Education.astro';
 import Contact from '../components/Contact.astro';
+import portada from '../components/assets/portada.webp';
 
 const title = "Yeison Carrillo - Administrador de Sistemas IT";
 const description = "Más de 10 años de experiencia en sectores bancarios, telecomunicaciones y más. Especializado en gestión de cambios, ITIL y automatización.";
