--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const description = "Más de 10 años de experiencia en sectores bancarios, tele
     <Contact />
   </main>
   <footer class="footer">
-    <p>© 2023 Yeison Arbey Carrillo Lemus. Todos los derechos reservados.</p>
+    <p>© 2023 Yeison Carrillo. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
